@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.3 2012/10/03 00:20:14 asau Exp $
+# $NetBSD: Makefile,v 1.4 2012/10/03 21:54:09 wiz Exp $
 
-DISTNAME=	Unicode-Collate-0.89
+DISTNAME=	Unicode-Collate-0.95
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	converters perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Unicode/}
 
