@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.17 2011/12/15 02:14:44 hiramatsu Exp $
+$NetBSD: distinfo,v 1.18 2012/07/05 14:06:59 sno Exp $
 
-SHA1 (Log-Dispatch-2.32.tar.gz) = 47669738ccb827fb44ab328ee0eae09c3a765f9a
-RMD160 (Log-Dispatch-2.32.tar.gz) = 973561b48dd5d66ceb75b8ed1533157465d50f59
-Size (Log-Dispatch-2.32.tar.gz) = 31910 bytes
+SHA1 (Log-Dispatch-2.33.tar.gz) = 6453cc7849f5afcf6a816fddddb0fee121d3fa93
+RMD160 (Log-Dispatch-2.33.tar.gz) = 55e09e2d6cc6290e9d9eb4634adb9224d792fcf4
+Size (Log-Dispatch-2.33.tar.gz) = 32231 bytes
