@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.14 2012/09/15 10:05:19 obache Exp $
+# $NetBSD: Makefile,v 1.15 2012/10/02 20:11:38 asau Exp $
 
-DISTNAME=		ecl-12.7.1
-PKGREVISION=		1
+DISTNAME=		ecl-12.12.1
 CATEGORIES=		lang
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=ecls/}
+EXTRACT_SUFX=		.tgz
 
 MAINTAINER=		asau@inbox.ru
 HOMEPAGE=		http://ecls.sourceforge.net/
