@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2012,v 1.3749 2012/12/08 00:15:35 jakllsch Exp $
+$NetBSD: CHANGES-2012,v 1.3753 2012/12/08 12:14:00 wen Exp $
 
 Changes to the packages collection and infrastructure in 2012:
 
@@ -5697,6 +5697,7 @@ Changes to the packages collection and infrastructure in 2012:
 	Updated www/php-concrete5 to 5.6.0.2 [ryoon 2012-12-06]
 	Updated www/curl to 7.28.1 [adam 2012-12-06]
 	Updated graphics/openjpeg to 2.0.0 [adam 2012-12-06]
+	Added x11/clipit version 1.4.2 [khorben 2012-12-07]
 	Updated geography/epsg to 8.1 [gdt 2012-12-07]
 	Updated x11/qt4 to 4.8.4 [adam 2012-12-07]
 	Updated x11/qt4-libs to 4.8.4 [adam 2012-12-07]
@@ -5772,3 +5773,6 @@ Changes to the packages collection and infrastructure in 2012:
 	Updated chat/psi to 0.15 [schnoebe 2012-12-07]
 	Updated graphics/darktable to 1.1 [jakllsch 2012-12-08]
 	Updated lang/sbcl to 1.1.2 [asau 2012-12-08]
+	Updated converters/p5-Unicode-Collate to 0.95 [wen 2012-12-08]
+	Updated devel/p5-Log-Dispatch to 2.33 [wen 2012-12-08]
+	Updated lang/ecl to 12.12.1 [asau 2012-12-08]
